--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-Website
-https://daneng1.github.io/shirtshop/
+<!DOCTYPE html>
+<html>
+    <head>
+
+        
+    </head>
+
+    <header> 
+        <h1>The Shirt Shop</h1>
+        <nav>
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>home</li>
+                <li>home</li>
+            </ul>
+        </nav>
+    </header>
+</html>
