--- a/index.html
+++ b/index.html
@@ -16,4 +16,35 @@
             </ul>
         </nav>
     </header>
+    <body>
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+        <h2>Submit Your Design</h2>
+
+        <img src="https://via.placeholder.com/150" alt />
+
+
+    </body>
+
+<footer> 
+    &copy; 2011 Shirt Worlf
+</footer>
 </html>
