--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <body>
-        <article>
+        <figure>
                                 
         <h2>Submit Your Design</h2>
         <img src="https://via.placeholder.com/150" alt />
@@ -42,7 +42,7 @@
         <img src="https://via.placeholder.com/150" alt />
 
 
-        </article>
+        </figure>
 
 
             
