--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
             margin: 20px:
             border: 1px solid #eeeeee;
 
+            float: left:
+            width: 150px:
+            height: 150px
+            padding: 5px
+            margin: 20px:
+            border: 1px solid #eeeeee;
+
+            float: left:
+            width: 150px:
+            height: 150px
+            padding: 5px
+            margin: 20px:
+            border: 1px solid #eeeeee;
+
+
         }
         </style>    
     </head>
