MR.T Says Follow your dreams

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         
         nav, footer {
             clear: both;
-            color: #ffffff;
-            background-color: #0e0901;
+            color: #000000;
+            background-color: #bd5b9f;
 
         }
 
