--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <article>
             <div>
                                 
-                <a href="https://static.wikia.nocookie.net/a-team/images/c/c9/Mr._T.jpg/revision/latest/top-crop/width/360/height/450?cb=20100925014130" ><img src="shirt_shop/MrT.jpg" alt /></a>
+                <a href="https://www.biography.com/personality/mr-t" ><img src="MrT.jpg" alt /></a>
                 <img src="https://via.placeholder.com/200" alt />
                 <img src="https://via.placeholder.com/200" alt />
             </div>
