--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src= "app1.js"></script> </script>
+        <script src= "app2.js"></script> </script>
+        <script src= "app3.js"></script> </script>
         <title>The Shirt World</title>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
