--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
     <head>
         <script src= "app1.js"></script> </script>
-        <script src= "app2.js"></script> </script>
-        <script src= "app3.js"></script> </script>
-        <title>The Shirt World</title>
+        <title></title>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
 
     <body>
     <header> 
-        <h1>The Shirt Shop</h1>
+        <h1><script> whatis(variable1) </script></h1>
         <nav>
             <ul>
                 <li>Home</li>
@@ -20,6 +18,8 @@
             </ul>
         </nav>
     </header>
+
+
     <section>
         <article>
             <div class="row1">
@@ -81,6 +81,11 @@
             </div>
             </article>           
             </section>
+
+            <article>
+
+             <p>Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!! Random WORDS!!! I PITY THE FOOL!!! Random WORDS!!!</p>   
+            </article>
    
             
     </body>
